# otl-modem

./: .gitignore  README.md  z60_otl_modem.rules
fw/: Makefile
fw/sim/: ft2232h_interface.v
fw/src/: ft2232h_interface.v
fw/syn/: otl-modem.pcf  top.v
soapysdr-driver/: CMakeLists.txt  device.cpp  device.hpp  otl-modem-support.cpp
